# password_authenticator

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  run.sh  setup.sh
python/: ctap2.py  softfido_tests.py
src/: crypto.rs  ctaphid.rs  hid.rs  logger.rs  main.rs  prompt.rs  test.rs  usbip.rs
src/communication/: ctaphid.rs  eventloop.rs  hid.rs  mod.rs  usbip.rs
src/tools/: mod.rs  prompt.rs  protocol.rs
test/: ctap.py  ctap2.py  hpserver.py  test.py
test/result/: adder.py  adder2.py
test/result/desktop/: result10000.txt  result100000.txt  result320000.txt  result390000.txt
test/result/laptop/: result10000.txt  result100000.txt  result320000.txt  result390000.txt
test/result/mobile/: result10000.txt  result100000.txt  result320000.txt  result390000.txt
